tests/lean/letrec1.lean.expected.out
letrec1.lean:6:0: error: 'f1.g' has already been declared
letrec1.lean:18:35: error: unknown identifier 'g'
with resulting expansion
  HasLess.Less._@._internal._hyg.0 y g x 
while expanding
  y < g x 
while expanding
  { y : Nat // y < g x } 
